--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,15 @@
         <module>DataStructures</module>
     </modules>
 
+    <properties>
+        <compiler.version>1.8</compiler.version>
+
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
         <dependency>
