--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>StructuredStreaming</module>
         <module>MongoDB</module>
         <module>DroolsDemo</module>
+        <module>DesignPattern</module>
     </modules>
 
     <properties>
