--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>MongoDB</module>
         <module>DroolsDemo</module>
         <module>DesignPattern</module>
+        <module>Flink-Drools</module>
     </modules>
 
     <properties>
